feat(hop): implement identity access baseline
